--- a/header.html
+++ b/header.html
@@ -108,10 +108,10 @@
                                     <li>
                                         <span>Terapia ocupacional</span>
                                         <ul class="dropdown-sec">
-                                            <li><a href="#">Infantil</a></li>
-                                            <li><a href="#">Neurológica</a></li>
-                                            <li><a href="#">Saúde Mental</a></li>
-                                            <li><a href="#">Snoezelen</a></li>
+                                            <li><a href="pages/terapia.html#A">Infantil</a></li>
+                                            <li><a href="pages/terapia.html#B">Neurológica</a></li>
+                                            <li><a href="pages/terapia.html#C">Saúde Mental</a></li>
+                                            <li><a href="pages/terapia.html#D">Snoezelen</a></li>
                                         </ul>
                                     </li>
                                     <li>
@@ -212,7 +212,7 @@
                         </li>
                         <a href="#" class="primary-btn" style="
                                     right: 0;
-                                    position: absolute;
+                                    position: absolute; margin-top: 0.4rem;
                                 "> <i class="fa fa-lock"></i> Área Reservada</a>
                     </ul>
 
