--- a/pages/header.html
+++ b/pages/header.html
@@ -89,30 +89,30 @@
                                     <li>
                                         <span>Nutrição</span>
                                         <ul class="dropdown-sec">
-                                            <li><a href="#">Nutrição Geral</a></li>
-                                            <li><a href="#">Nutrição Infantil</a></li>
-                                            <li><a href="#">Diabetes Gestacional</a></li>
-                                            <li><a href="#">Pré-conceção</a></li>
-                                            <li><a href="#">Pré-natal</a></li>
+                                            <li><a href="nutricao.html#A">Nutrição Geral</a></li>
+                                            <li><a href="nutricao.html#B">Nutrição Infantil</a></li>
+                                            <li><a href="nutricao.html#C">Diabetes Gestacional</a></li>
+                                            <li><a href="nutricao.html#D">Pré-conceção</a></li>
+                                            <li><a href="nutricao.html#E">Pré-natal</a></li>
                                         </ul>
                                     </li>
                                     <li>
                                         <span>Pediatria</span>
                                         <ul class="dropdown-sec">
-                                            <li><a href="#">Pré-natal</a></li>
-                                            <li><a href="#">Rotina</a></li>
-                                            <li><a href="#">Criança doente</a></li>
-                                            <li><a href="#">Consulta de sono infantil</a></li>
-                                            <li><a href="#">Introdução alimentar</a></li>
+                                            <li><a href="pediatria.html#A">Pré-natal</a></li>
+                                            <li><a href="pediatria.html#B">Rotina</a></li>
+                                            <li><a href="pediatria.html#C">Criança doente</a></li>
+                                            <li><a href="pediatria.html#D">Consulta de sono infantil</a></li>
+                                            <li><a href="pediatria.html#E">Introdução alimentar</a></li>
                                         </ul>
                                     </li>
                                     <li>
                                         <span>Terapia ocupacional</span>
                                         <ul class="dropdown-sec">
-                                            <li><a href="#">Infantil</a></li>
-                                            <li><a href="#">Neurológica</a></li>
-                                            <li><a href="#">Saúde Mental</a></li>
-                                            <li><a href="#">Snoezelen</a></li>
+                                            <li><a href="terapia.html#A">Infantil</a></li>
+                                            <li><a href="terapia.html#B">Neurológica</a></li>
+                                            <li><a href="terapia.html#C">Saúde Mental</a></li>
+                                            <li><a href="terapia.html#D">Snoezelen</a></li>
                                         </ul>
                                     </li>
                                     <li>
@@ -213,7 +213,7 @@
                         </li>
                         <a href="#" class="primary-btn" style="
                                             right: 0;
-                                            position: absolute;
+                                            position: absolute; margin-top: 0.4rem;
                                         "> <i class="fa fa-lock"></i> Área Reservada</a>
                     </ul>
 
