--- a/consultas.html
+++ b/consultas.html
@@ -299,10 +299,12 @@
                         <div class="services__item__text">
                             <h5>Terapia Ocupacional</h5>
                             <ul>
-                                <li><a href=""><i class="fa fa-check-circle"></i> Infantil</a></li>
-                                <li><a href=""><i class="fa fa-check-circle"></i> Neurológica</a></li>
-                                <li><a href=""><i class="fa fa-check-circle"></i> Saúde Mental</a></li>
-                                <li><a href=""><i class="fa fa-check-circle"></i> Snoezelen</a></li>
+                                <li><a href="pages/terapia.html#A"><i class="fa fa-check-circle"></i> Infantil</a></li>
+                                <li><a href="pages/terapia.html#B"><i class="fa fa-check-circle"></i> Neurológica</a>
+                                </li>
+                                <li><a href="pages/terapia.html#C"><i class="fa fa-check-circle"></i> Saúde Mental</a>
+                                </li>
+                                <li><a href="pages/terapia.html#D"><i class="fa fa-check-circle"></i> Snoezelen</a></li>
                             </ul>
                         </div>
                     </div>
