--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
                             </a>
                         </li>
                         <li>
-                            <a href="consultas.html">
+                            <a href="pages/nutricao.html">
                                 <h5><strong><img src="img/icons/ci-2.png" alt="Nutrição"></strong></h5>
                                 <h5 class="subtitle mt-4 fw-semibold">Nutrição</h5>
                             </a>
                         </li>
                         <li>
-                            <a href="consultas.html">
+                            <a href="pages/terapia.html">
                                 <h5><strong><img src="img/icons/ci-3.png" alt="Terapia Ocupacional"></strong></h5>
                                 <h5 class="subtitle mt-4 fw-semibold">Terapia Ocupacional</h5>
                             </a>
@@ -117,26 +117,58 @@
                         </li>
 
                         <li>
+                            <a href="pages/cirurgia.html">
+                                <h5><strong><img src="img/icons/cirurgia-plastica.png" width="64" height="64"
+                                            alt="Terapia Ocupacional"></strong></h5>
+                                <h5 class="subtitle mt-4 fw-semibold">Cirurgia</h5>
+                            </a>
+                        </li>
+                        <li>
                             <a href="consultas.html">
-                                <h5><strong><img src="img/icons/ci-3.png" alt="Terapia Ocupacional"></strong></h5>
+                                <h5><strong><img src="img/icons/ENFERM.png" width="64" height="64"
+                                            alt="Vacinação"></strong></h5>
+                                <h5 class="subtitle mt-4 fw-semibold">Enfermagem</h5>
+                            </a>
+                        </li>
+                        <li>
+                            <h5><strong><img src="img/icons/travel-and-tourism.png" width="64" height="64"
+                                        alt="Nutrição"></strong></h5>
+                            <h5 class="subtitle mt-4 fw-semibold">Medicina do Viajante</h5>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="pages/pediatria.html">
+                                <h5><strong><img src="img/icons/pediatrics.png" width="64" height="64"
+                                            alt="Pediatria"></strong></h5>
+                                <h5 class="subtitle mt-4 fw-semibold">Pediatria</h5>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="pages/pediatria.html">
+                                <h5><strong><img src="img/icons/reiki.png" width="64" height="64"
+                                            alt="Pediatria"></strong></h5>
                                 <h5 class="subtitle mt-4 fw-semibold">Terapia Ocupacional</h5>
                             </a>
                         </li>
                         <li>
-                            <a href="consultas.html">
-                                <h5><strong><img src="img/icons/ci-1.png" alt="Vacinação"></strong></h5>
-                                <h5 class="subtitle mt-4 fw-semibold">Vacinação</h5>
+                            <a href="pages/pediatria.html">
+                                <h5><strong><img src="img/icons/atendente.png" width="64" height="64"
+                                            alt="Pediatria"></strong></h5>
+                                <h5 class="subtitle mt-4 fw-semibold">Testes Diagnósticos</h5>
                             </a>
                         </li>
                         <li>
-                            <h5><strong><img src="img/icons/ci-2.png" alt="Nutrição"></strong></h5>
-                            <h5 class="subtitle mt-4 fw-semibold">Nutrição</h5>
+                            <a href="pages/pediatria.html">
+                                <h5><strong><img src="img/icons/amamentacao.png" width="64" height="64"
+                                            alt="Pediatria"></strong></h5>
+                                <h5 class="subtitle mt-4 fw-semibold">Preparação para a Amamentação</h5>
                             </a>
                         </li>
                         <li>
-                            <a href="consultas.html">
-                                <h5><strong><img src="img/icons/ci-4.png" alt="Pediatria"></strong></h5>
-                                <h5 class="subtitle mt-4 fw-semibold">Pediatria</h5>
+                            <a href="pages/pediatria.html">
+                                <h5><strong><img src="img/icons/conferencia.png" width="64" height="64"
+                                            alt="Pediatria"></strong></h5>
+                                <h5 class="subtitle mt-4 fw-semibold">Workshops</h5>
                             </a>
                         </li>
                     </ul>
