--- a/pages/nutricao.html
+++ b/pages/nutricao.html
@@ -127,7 +127,31 @@
     </section>
     <!-- Blog Details Section End -->
 
+    <section class="services">
+        <div class="container">
+            <div class="row d-flex justify-content-center">
+                <div class="col-lg-12">
+                    <div class="ml-4 mr-4">
+                        <div class="blog__details__text__item">
+                            <!-- Título da Seção -->
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <div class="section-title text-center">
+                                        <button id="ABtn">a) Consulta de Nutrição Geral</button>
+                                        <button id="BBtn">b) Consulta de Nutrição Infantil</button>
+                                        <button id="CBtn">c) Consulta de Diabetes Gestacional</button>
+                                        <button id="DBtn">d) Consulta de Pré-conceção</button>
+                                        <button id="EBtn">e) Consulta de Pré-natal</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
+                </div>
+            </div>
+        </div>
+    </section>
 
     <section class="services  set-bg">
         <div class="container">
@@ -150,7 +174,7 @@
                 </div>
             </div>
             <div class="d-flex">
-                <div id="A" class="col-lg-8 col-md-8">
+                <div id="A" class="col-lg-11 col-md-11">
                     <div class="row">
                         <div class="blog__details__text ml-4 mr-4">
                             <div class="blog__details__text__item">
@@ -418,33 +442,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4">
-                    <div class="row">
-                        <div class="card w-100 shadow">
-                            <div class="card-more">
-                                <p class="border-bottom">Neste espaço existem consultas em várias áreas,
-                                    tanto
-                                    para as pessoas que estão na “preparação para o parto”
-                                    como na “recuperação pós parto”. Clique em cada um dos ícones seguintes para saber
-                                    que consultas tem disponíveis.</p>
-                                <div class="d-flex">
-                                    <div class="col-lg-12 col-md-12 ">
-                                        <div class="card-icon justify-content-center">
-                                            <img src="../img/icons/nutritional-plan.png" style="width: 150px;">
-                                        </div>
-                                        <div class="card-text">
-                                            <button id="ABtn">1. Consulta de Nutrição Geral</button>
-                                            <button id="BBtn">2. Consulta de Nutrição Infantil</button>
-                                            <button id="CBtn">3. Consulta de Diabetes Gestacional</button>
-                                            <button id="DBtn">4. Consulta de Pré-conceção</button>
-                                            <button id="EBtn">5. Consulta de Pré-natal</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
@@ -576,7 +573,12 @@
             CDiv.style.display = 'none';  // Esconde a div pós-parto
             DDiv.style.display = 'none';  // Esconde a div pós-parto
             EDiv.style.display = 'none';  // Esconde a div pós-parto
-            title.textContent = "Consulta de Nutrição Geral"; // Atualiza o texto para "Cirurgia"
+            title.textContent = "a) Consulta de Nutrição Geral"; // Atualiza o texto para "Cirurgia"
+            ABtn.classList.add("active");
+            BBtn.classList.remove("active");
+            CBtn.classList.remove("active");
+            DBtn.classList.remove("active");
+            EBtn.classList.remove("active");
         }
 
         // Função para exibir a consulta pós-parto, esconder a Cirurgia e atualizar o texto
@@ -586,7 +588,12 @@
             CDiv.style.display = 'none'; // Exibe a div pós-parto
             DDiv.style.display = 'none'; // Exibe a div pós-parto
             EDiv.style.display = 'none'; // Exibe a div pós-parto
-            title.textContent = "Consulta de Nutrição Infantil"; // Atualiza o texto para "Pós-parto"
+            title.textContent = "b) Consulta de Nutrição Infantil"; // Atualiza o texto para "Pós-parto"
+            ABtn.classList.remove("active");
+            BBtn.classList.add("active");
+            CBtn.classList.remove("active");
+            DBtn.classList.remove("active");
+            EBtn.classList.remove("active");
         }
 
         // Função para exibir a consulta pós-parto, esconder a Cirurgia e atualizar o texto
@@ -596,23 +603,40 @@
             CDiv.style.display = 'block'; // Exibe a div pós-parto
             DDiv.style.display = 'none';  // Esconde a div Cirurgia
             EDiv.style.display = 'none';  // Esconde a div Cirurgia
-            title.textContent = "Consulta de Diabetes Gestacional"; // Atualiza o texto para "Pós-parto"
-        }      // Função para exibir a consulta pós-parto, esconder a Cirurgia e atualizar o texto
+            title.textContent = "c) Consulta de Diabetes Gestacional"; // Atualiza o texto para "Pós-parto"
+            ABtn.classList.remove("active");
+            BBtn.classList.remove("active");
+            CBtn.classList.add("active");
+            DBtn.classList.remove("active");
+            EBtn.classList.remove("active");
+        }
+        // Função para exibir a consulta pós-parto, esconder a Cirurgia e atualizar o texto
         function showD() {
             ADiv.style.display = 'none';  // Esconde a div Cirurgia
             BDiv.style.display = 'none';  // Esconde a div Cirurgia
             CDiv.style.display = 'none';  // Esconde a div Cirurgia
             DDiv.style.display = 'block'; // Exibe a div pós-parto
             EDiv.style.display = 'none'; // Exibe a div pós-parto
-            title.textContent = "Consulta de Pré-conceção"; // Atualiza o texto para "Pós-parto"
-        }      // Função para exibir a consulta pós-parto, esconder a Cirurgia e atualizar o texto
+            title.textContent = "d) Consulta de Pré-conceção"; // Atualiza o texto para "Pós-parto"
+            ABtn.classList.remove("active");
+            BBtn.classList.remove("active");
+            CBtn.classList.remove("active");
+            DBtn.classList.add("active");
+            EBtn.classList.remove("active");
+        }
+        // Função para exibir a consulta pós-parto, esconder a Cirurgia e atualizar o texto
         function showE() {
             ADiv.style.display = 'none';  // Esconde a div Cirurgia
             BDiv.style.display = 'none';  // Esconde a div Cirurgia
             CDiv.style.display = 'none';  // Esconde a div Cirurgia
             DDiv.style.display = 'none'; // Exibe a div pós-parto
             EDiv.style.display = 'block'; // Exibe a div pós-parto
-            title.textContent = "Consulta de Pré-natal"; // Atualiza o texto para "Pós-parto"
+            title.textContent = "e) Consulta de Pré-natal"; // Atualiza o texto para "Pós-parto"
+            ABtn.classList.remove("active");
+            BBtn.classList.remove("active");
+            CBtn.classList.remove("active");
+            DBtn.classList.remove("active");
+            EBtn.classList.add("active");
         }
         // Verificar o fragmento da URL e inicializar a página de acordo
         window.addEventListener('load', function () {
