--- a/pages/pediatria.html
+++ b/pages/pediatria.html
@@ -460,7 +460,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-4">
                         <div class="footer__logo">
-                            <a href="../#"><img src="../img/footer-logo.png" alt=""></a>
+                            <a href="../index.html"><img src="../img/footer-logo.png" alt=""></a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-8">
