--- a/about.html
+++ b/about.html
@@ -185,7 +185,7 @@
 
     <!-- Hero Section Begin -->
     <section class="hero set-bg mt-8" data-setbg="img/blog/details/blog-hero11.jpg" style='background-image: url("img/blog/details/blog-hero.jpg"); color: ffff;
-        height: 30rem;'>
+        height: 32rem;'>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 mt-2 ml-4">
@@ -195,18 +195,19 @@
                         </div>
 
                         <h2 class="text-white mb-3">Destaque</h2>
-                        <span class="text-white" style="font-size: 19px;">A nossa visão holística da saúde abrange o seu
+                        <span class="text-white" style="font-size: 19px;">A NOSSA VISÃO HOLÍSTICA da saúde abrange o seu
                             todo. Sabemos que a
                             saúde mental é tão ou mais importante que a saúde
-                            física. Cuidar dos nossos pacientes e das suas famílias desde a empatia e da disponibilidade
+                            física. Cuidar dos nossos pacientes e das suas famílias desde a EMPATIA e da DISPONIBILIDADE
                             para ouvir as suas
-                            preocupações ou receios é a nossa forma de estar como profissionais de saúde. <br><br>
+                            preocupações ou receios é a nossa forma de estar como PROFISSIONAIS DE SAÚDE. <br><br>
 
-                            A excelência no atendimento aos nossos pacientes é a nossa imagem de marca. <br>
-                            A formação continuada dos nossos profissionais de saúde é imprescindível. <br>
-                            A transmissão de informação científica de qualidade baseada nos estudos mais atuais é o
-                            nosso compromisso. <br>
-                            A Clínica segue as guidelines internacionais validadas pelas entidades responsáveis e
+                            A EXCELÊNCIA NO ATENDIMENTO aos nossos pacientes é a nossa imagem de marca. <br>
+                            A FORMAÇÃO CONTINUADA dos nossos PROFISSIONAIS DE SAÚDE é imprescindível. <br>
+                            A transmissão de INFORMAÇÃO CIENTISTA DE QUALIDADE baseada nos estudos mais atuais é o
+                            nosso compromisso. <br><br>
+                            A Clínica segue as GUIDELINES INTERNACIONAIS internacionais validadas pelas entidades
+                            responsáveis e
                             credíveis em cada uma das suas
                             especialidades.
                         </span>
