--- a/header.html
+++ b/header.html
@@ -3,10 +3,10 @@
         <div class="row">
             <div class="col-lg-8">
                 <ul class="header__top__left">
-                    <li><a href="#" class="text-white"><i class="fa fa-phone"></i> +258 84 1869 7194</a></li>
+                    <li><a href="#" class="text-white"><i class="fa fa-phone"></i> +258 84 869 7194</a></li>
                     <li><i class="fa fa-map-marker"></i> Edifício ou Shopping 24, Avenida 24 de Julho, Loja 20
                     </li>
-                    <li><i class="fa fa-clock-o"></i> Seg a Sáb 8:00 às 17:00</li>
+                    <li><i class="fa fa-clock-o"></i> Seg a Sex 8:00 às 18:00</li>
                 </ul>
             </div>
             <div class="col-lg-4">
