--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <!-- Título da Seção -->
-                <div class="body">
-                    <ul class="body-ul" id="c">
 
+
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <ul class="servocos d-flex flex-wrap justify-content-between">
                         <li>
                             <a href="consultas.html">
                                 <h5><strong><img src="img/icons/ci-4.png" alt="Pediatria"></strong></h5>
@@ -174,6 +174,8 @@
                     </ul>
                 </div>
             </div>
+
+
         </div>
     </section>
 
@@ -194,6 +196,56 @@
         </div>
     </section>
     <!-- Hero Section End -->
+
+    <!-- Início da Secção de Serviços -->
+    <section class="chooseus spad mt-4">
+        <div class="container">
+            <!-- Título da Seção -->
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <div class="section-title">
+                        <h2 class="mb-2">a SUA Jornada de Maternidade começa aqui</h2>
+                        <span>Da gravidez, ao apoio no pós-parto e ao crescimento do seu filhote!</span>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="consultation__text p-0">
+                        <div class="row">
+                            <!-- Banner 1 -->
+                            <div class="col banner-1" style="background-image: url('img/treinamento.jpg');">
+                                <div class="banner-text subtitle">
+                                    Curso de Preparação para o Parto e Parentalidade: pensado para si!
+                                </div>
+                                <button class="banner-btn">Saiba mais</button>
+                            </div>
+                            <div class="col">
+                                <!-- Banner 2 -->
+                                <div class="row banner-2"
+                                    style="background-image: url('https://img.freepik.com/free-photo/closeup-pediatrician-preparing-vaccine-child_637285-10527.jpg?t=st=1733482817~exp=1733486417~hmac=341135d4c3fe6fcb68149cb1a199b408293e3061960053bffbda6e5d9b424e08&w=826');">
+                                    <div class="banner-text subtitle">
+                                        Planos de Vacinação adaptados ao seu país de origem.
+                                    </div>
+                                    <button class="banner-btn">Saiba mais</button>
+                                </div>
+
+                                <!-- Banner 3 -->
+                                <div class="row banner-2" style="background-image: url('img/terapia-snoezelen.jpg');">
+                                    <div class="banner-text subtitle">
+                                        Sala Snoezelen: a única sala multissensorial em Moçambique!
+                                    </div>
+                                    <button class="banner-btn">Saiba mais</button>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+    </section>
+    <!-- Fim da Secção de Serviços -->
+
 
 
     <!-- Consultation Section Begin -->
@@ -268,55 +320,6 @@
     <!-- Consultation Section End -->
 
 
-    <!-- Início da Secção de Serviços -->
-    <section class="chooseus spad mt-4">
-        <div class="container">
-            <!-- Título da Seção -->
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <div class="section-title">
-                        <h2 class="mb-2">a SUA Jornada de Maternidade Começa Aqui</h2>
-                        <span>Da gravidez, ao apoio no pós-parto e ao crescimento do seu filhote!</span>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="consultation__text p-0">
-                        <div class="row">
-                            <!-- Banner 1 -->
-                            <div class="col banner-1" style="background-image: url('img/treinamento.jpg');">
-                                <div class="banner-text subtitle">
-                                    Curso de Preparação para o Parto e Parentalidade: pensado para si!
-                                </div>
-                                <button class="banner-btn">Saiba mais</button>
-                            </div>
-                            <div class="col">
-                                <!-- Banner 2 -->
-                                <div class="row banner-2"
-                                    style="background-image: url('https://img.freepik.com/free-photo/closeup-pediatrician-preparing-vaccine-child_637285-10527.jpg?t=st=1733482817~exp=1733486417~hmac=341135d4c3fe6fcb68149cb1a199b408293e3061960053bffbda6e5d9b424e08&w=826');">
-                                    <div class="banner-text subtitle">
-                                        Planos de Vacinação adaptados ao seu país de origem.
-                                    </div>
-                                    <button class="banner-btn">Saiba mais</button>
-                                </div>
-
-                                <!-- Banner 3 -->
-                                <div class="row banner-2" style="background-image: url('img/terapia-snoezelen.jpg');">
-                                    <div class="banner-text subtitle">
-                                        Sala Snoezelen: a única sala multissensorial em Moçambique!
-                                    </div>
-                                    <button class="banner-btn">Saiba mais</button>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-    </section>
-    <!-- Fim da Secção de Serviços -->
-
     <!-- Testimonials Section Begin -->
     <section class="testimonials spad">
         <div class="container">
@@ -324,7 +327,7 @@
                 <div class="col-lg-12 text-center">
                     <div class="section-title">
                         <h2>Testemunhos</h2>
-                        <span class="subtitle">A sua opinião é valiosa para nós!</span>
+                        <span class="subtitle">A SUA opinião é valiosa para nós!</span>
                     </div>
                 </div>
             </div>
@@ -645,7 +648,7 @@
                 <div class="col-lg-12 text-center">
                     <div class="section-title">
                         <!-- <span>Por que nos escolher?</span> -->
-                        <h2>Acompanhe-nos nas redes sociais</h2>
+                        <h2>A Clínica nas Redes Sociais</h2>
                     </div>
                 </div>
             </div>
@@ -880,45 +883,47 @@
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-1VDDWMRSTH"></script>
     <script>
-        var timer = 4000;
+        document.addEventListener("DOMContentLoaded", function () {
+            const timer = 4000; // Tempo entre transições
+            let i = 0; // Índice inicial
+            const items = document.querySelectorAll('.servocos > li'); // Todos os itens
+            const max = items.length; // Número total de itens
 
-        var i = 0;
-        var max = $('#c > li').length;
+            // Função para exibir os 4 itens ativos com espaço entre eles
+            function showItems() {
+                // Remove a classe 'active' de todos os itens
+                items.forEach((item, index) => {
+                    item.classList.remove('active');
+                    item.style.transitionDelay = `${0}s`; // Reseta o atraso
+                });
 
-        $("#c > li").eq(i).addClass('active').css('left', '0');
-        $("#c > li").eq(i + 1).addClass('active').css('left', '25%');
-        $("#c > li").eq(i + 2).addClass('active').css('left', '50%');
-        $("#c > li").eq(i + 3).addClass('active').css('left', '75%');
-
-
-        setInterval(function () {
-
-            $("#c > li").removeClass('active');
-
-            $("#c > li").eq(i).css('transition-delay', '0.25s');
-            $("#c > li").eq(i + 1).css('transition-delay', '0.5s');
-            $("#c > li").eq(i + 2).css('transition-delay', '0.75s');
-            $("#c > li").eq(i + 3).css('transition-delay', '1s');
-
-            if (i < max - 4) {
-                i = i + 4;
+                // Exibe os próximos 4 itens e adiciona delay nas transições
+                for (let j = 0; j < 4; j++) {
+                    const currentIndex = i + j;
+                    if (items[currentIndex]) {
+                        items[currentIndex].classList.add('active');
+                        items[currentIndex].style.transitionDelay = `${0.25 * (j + 1)}s`; // Adiciona o atraso gradual
+                    }
+                }
             }
 
-            else {
-                i = 0;
-            }
+            // Exibe os primeiros itens ao carregar a página
+            showItems();
 
-            $("#c > li").eq(i).css('left', '0').addClass('active').css('transition-delay', '1.25s');
-            $("#c > li").eq(i + 1).css('left', '25%').addClass('active').css('transition-delay', '1.5s');
-            $("#c > li").eq(i + 2).css('left', '50%').addClass('active').css('transition-delay', '1.75s');
-            $("#c > li").eq(i + 3).css('left', '75%').addClass('active').css('transition-delay', '2s');
+            // Alterna os itens a cada intervalo
+            setInterval(function () {
+                // Atualiza o índice para o próximo conjunto de 4 itens
+                if (i < max - 4) {
+                    i += 4;
+                } else {
+                    i = 0; // Reinicia do início
+                }
 
-        }, timer);
+                // Exibe os próximos 4 itens
+                showItems();
+            }, timer);
+        });
 
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-        gtag('config', 'G-1VDDWMRSTH');
     </script>
 
     <!-- Js Plugins -->
