--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@
 
     <!-- Chooseus Section Begin -->
     <section class="testimonials spad mt-7 pb-4">
+    <section class="testimonials spad mt-7 mb-0 pb-0">
         <div class="container">
-            <div class="row">
+            <div class="row mb-4">
                 <div class="col-lg-12 text-center">
                     <div class="section-title">
                         <h2 class="mb-2">Os nossos serviços</h2>
@@ -180,7 +181,7 @@
     </section>
 
     <!-- Início da Secção de Serviços -->
-    <section class="chooseus spad mt-4">
+    <section class="chooseus mbt-4">
         <div class="container">
             <!-- Título da Seção -->
             <div class="row">
